# Rede_Neural_para_Previsao_de_Churn

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: deployment_architecture.md  ml_canvas.md  model_card.md  monitoring_plan.md
models/: mlp_best.pt  pipeline.joblib
notebooks/: 01_eda.ipynb  02_baselines.ipynb  03_mlp_pytorch.ipynb
src/: config.py
src/api/: api.py
src/data/: loader.py  preprocessing.py  schema.py
src/models/: baseline.py  models.py
src/training/: train.py
tests/: conftest.py  test_api.py  test_preprocessing.py  test_schema.py  test_smoke.py
