[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telco-churn"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "numpy",
    "pydantic",
    "openpyxl",
    "torch",
    "scikit-learn",
    "mlflow",
    "matplotlib",
    "seaborn",
    "pandera",
    "joblib",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "httpx",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]